@@ -42,7 +42,14 @@
       checker=".upgrade.check_upgrade_334_335_portlet_cache_parameters"
       />
 
+  <!-- CPS 3.4.0 upgrades -->
+
+  <cps:upgradeStep
+      title="Reset portal properties"
+      source="3.3.8" destination="3.4.0"
+      handler=".upgrade.reset_338_340_props"
+      />
+
   <include file="browser/configure.zcml" />
 
 </configure>
-
