@@ -2,9 +2,9 @@
 <site>
  <property name="title">CPS Site</property>
  <property name="description"></property>
- <property name="enable_password_reset" type="boolean">True</property>
- <property name="enable_password_reminder" type="boolean">False</property>
- <property name="enable_portal_joining" type="boolean">False</property>
+ <property name="enable_password_reset">True</property>
+ <property name="enable_password_reminder">False</property>
+ <property name="enable_portal_joining">False</property>
  <property name="email_from_address" type="string">someone@example.com</property>
  <property name="email_from_name" type="string">CPS Manager</property>
  <property name="validate_email" type="boolean">False</property>
